<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imv_logo"
                android:layout_width="wrap_content"
                android:layout_height="600dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:alpha="0.05"
                app:srcCompat="@drawable/uni_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="FORMULARIO DE ETIQUETADO"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.4"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txv_actividad"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/txv_action" />

                            <TextView
                                android:id="@+id/txt_sex"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/txv_sex" />

                            <TextView
                                android:id="@+id/txv_age"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/txv_age" />

                            <TextView
                                android:id="@+id/txv_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/txv_time" />

                            <TextView
                                android:id="@+id/txv_frecuency"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/txv_freceuncy" />

                            <TextView
                                android:id="@+id/txv_ip"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/txv_ip" />

                            <TextView
                                android:id="@+id/txv_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/txt_name" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <Spinner
                                android:id="@+id/spn_list_action"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp" />

                            <Spinner
                                android:id="@+id/spn_list_sex"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp" />

                            <Spinner
                                android:id="@+id/spn_list_age"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp" />

                            <EditText
                                android:id="@+id/edt_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="5"
                                android:text="5" />

                            <EditText
                                android:id="@+id/edt_frecuency"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="2"
                                android:text="50" />

                            <EditText
                                android:id="@+id/edt_ip"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLength="50"
                                android:text="192.168.1.8:5000" />

                            <EditText
                                android:id="@+id/edt_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLength="50"
                                android:text="sinnombre" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.1"
                            android:orientation="vertical" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_start_stop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="onClickStartStop"
                    android:text="START/STOP"
                    app:backgroundTint="@color/rojo_uni" />

                <Button
                    android:id="@+id/btn_hide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="onClickHide"
                    android:text="Cerrar Configuración"
                    android:textColor="@color/rojo_uni"
                    android:visibility="visible"
                    app:backgroundTint="@color/uni_crema" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="onClickExit"
                    android:text="FINALIZAR CAPTURA"
                    app:backgroundTint="@android:color/darker_gray" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/txv_num_seg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="45sp" />

                    <TextView
                        android:id="@+id/txv_seg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="  seg." />
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>